--- a/game15/index.html
+++ b/game15/index.html
@@ -14,6 +14,10 @@
 
 <body>
 	<audio src="/music/music.wav"></audio>
+	 <audio autoplay>
+  <source src="music/music.wav" type="audio/wav">
+Your browser does not support the audio element.
+</audio> 
 	<h3>A, D or Arrow keys to move, W or space to jump</h3>
 	<canvas id="canvas"></canvas>
 	
