--- a/game15/index.html
+++ b/game15/index.html
@@ -5,20 +5,16 @@
 	<meta charset="UTF-8">
 	<title>Game5</title>
 	
-	
-	
 	<link rel="stylesheet" href="css/style.css">
 	
 	
 </head>
 
 <body>
-	<audio src="/music/music.wav"></audio>
 	 <audio autoplay>
   <source src="music/music.wav" type="audio/wav">
-Your browser does not support the audio element.
 </audio> 
-	<h3>A, D or Arrow keys to move, W or space to jump</h3>
+	<h3>WAD or Arrow keys to move, space to shoot</h3>
 	<canvas id="canvas"></canvas>
 	
 	<script  src="js/ekran.js"></script>
@@ -31,6 +27,7 @@ Your browser does not support the audio element.
 	<script  src="js/level4.js"></script>
 	<script  src="js/level5.js"></script>
 	<script  src="js/assets.js"></script>
+	<script  src="js/level6.js"></script>
 
 
 </body>
