--- a/game15/index.html
+++ b/game15/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	 <audio autoplay>
-  <source src="music/music.wav" type="audio/wav">
+  <source src="music/music.mp3" type="audio/mpeg">
 </audio> 
 	<h3>WAD or Arrow keys to move, space to shoot</h3>
 	<canvas id="canvas"></canvas>
