--- a/game15/index.html
+++ b/game15/index.html
@@ -14,7 +14,7 @@
 	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
 </audio> 
-	<h3>WAD or Arrow keys to move, space to shoot</h3>
+	<h3>WAD or Arrow keys to move, space to shoot. Best run on Firefox. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3>
 	<canvas id="canvas"></canvas>
 	
 	<script  src="js/ekran.js"></script>
