Add loading screen

--- a/game15/index.html
+++ b/game15/index.html
@@ -9,7 +9,7 @@
 	
 	
 </head>
-
+<div id="page">
 <body>
 	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
@@ -17,7 +17,6 @@
 	<h3>WAD or Arrow keys to move, space to shoot. Best run on Firefox. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3>
 	<canvas id="canvas"></canvas>
 	
-	<script  src="js/ekran.js"></script>
 	<script  src="js/setup.js"></script>
 	<script  src="js/update.js"></script>
 	<script  src="js/collisions.js"></script>
@@ -28,8 +27,11 @@
 	<script  src="js/level5.js"></script>
 	<script  src="js/assets.js"></script>
 	<script  src="js/level6.js"></script>
+	<script  src="js/loading.js"></script>
 
 
 </body>
+</div>
+<div id="loading"></div>
 
 </html>
