--- a/game16/index.html
+++ b/game16/index.html
@@ -23,6 +23,7 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
 	
 </head>
 <div id="page">
