--- a/game16/index.html
+++ b/game16/index.html
@@ -14,10 +14,10 @@
 </head>
 <div id="page">
 <body>
-	 <audio autoplay>
+<!--	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
-</audio> 
-	<h3>WAD or Arrow keys to move, space to shoot. Best run on Firefox. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3>
+</audio> -->
+	<div><h3>WAD or Arrow keys to move, space to shoot. Best run on Chrome. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 	<canvas id="canvas"></canvas>
 	
 	<script src="js/loading.js"></script>
@@ -32,6 +32,7 @@
 	<script src="js/level5.js"></script>
 	<script src="js/level6.js"></script>
 	<script  src="js/functions.js"></script>
+	<script src="js/level7.js"></script>
 
 
 </body>
