Experimenting with onload function

--- a/game16/index.html
+++ b/game16/index.html
@@ -10,17 +10,18 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
-	
+
 </head>
 <div id="page">
 <body>
 <!--	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
 </audio> -->
-	<div><h3>WAD or Arrow keys to move, space to shoot. Best run on Chrome. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
+	<div><h3>WAD or Arrow keys to move, space to shoot. Best run on Firefox. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 	<canvas id="canvas"></canvas>
-	
+
 	<script src="js/loading.js"></script>
+	<script src="js/classes.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="js/setup.js"></script>
 	<script src="js/update.js"></script>
@@ -31,7 +32,7 @@
 	<script src="js/level4.js"></script>
 	<script src="js/level5.js"></script>
 	<script src="js/level6.js"></script>
-	<script  src="js/functions.js"></script>
+	<script src="js/functions.js"></script>
 	<script src="js/level7.js"></script>
 
 
