--- a/game16/index.html
+++ b/game16/index.html
@@ -34,6 +34,7 @@
 	<script src="js/level6.js"></script>
 	<script src="js/functions.js"></script>
 	<script src="js/level7.js"></script>
+	<script src="js/level8.js"></script>
 
 
 </body>
