--- a/game16/index.html
+++ b/game16/index.html
@@ -6,8 +6,8 @@
 	<title>Locked</title>
 
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="theme-color" content="#ffffff">
+	<!--<meta name="msapplication-TileColor" content="#ffffff">-->
+	<!--<meta name="theme-color" content="#ffffff">-->
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
 
@@ -17,7 +17,7 @@
 <!--	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
 </audio> -->
-	<div><h3>WAD or Arrow keys to move, space to shoot. Best run on Firefox. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
+	<div><h3>WAD or Arrow keys to move, space to shoot. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 	<canvas id="canvas"></canvas>
 
 	<script src="js/loading.js"></script>
@@ -39,6 +39,6 @@
 
 </body>
 </div>
-<div id="loading"></div>
+<!--<div id="loading"></div>-->
 
 </html>
