--- a/game16/index.html
+++ b/game16/index.html
@@ -20,7 +20,7 @@
 	<div><h3>WAD or Arrow keys to move, space to shoot. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 	<canvas id="canvas"></canvas>
 
-	<script src="js/loading.js"></script>
+	<!--<script src="js/loading.js"></script>-->
 	<script src="js/classes.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="js/setup.js"></script>
