Pozbylem sie evala

--- a/game16/index.html
+++ b/game16/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
 
 </head>
-<div id="page">
+<!--<div id="page">-->
 <body>
 <!--	 <audio autoplay>
   <source src="music/music.mp3" type="audio/mpeg">
@@ -20,7 +20,6 @@
 	<div><h3>WAD or Arrow keys to move, space to shoot. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 	<canvas id="canvas"></canvas>
 
-	<!--<script src="js/loading.js"></script>-->
 	<script src="js/classes.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="js/setup.js"></script>
@@ -38,7 +37,6 @@
 
 
 </body>
-</div>
-<!--<div id="loading"></div>-->
+<!--</div>-->
 
 </html>
