--- a/game16/index.html
+++ b/game16/index.html
@@ -10,7 +10,7 @@
 
 	</head>
 	<body>
-		<div><h3>WAD or Arrow keys to move, space to shoot. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
+		<div><h3>WAD or Arrow keys to move, space to shoot. Press R to restart. Best run on Chrome. Donate: 19HSN6dpVHRBTAUUtWp5KuqV7EA635rWBB.</h3></div>
 		<canvas id="canvas"></canvas>
 
 		<script src="js/classes.js"></script>
