--- a/game16/index.html
+++ b/game16/index.html
@@ -27,5 +27,6 @@
 		<script src="js/functions.js"></script>
 		<script src="js/level7.js"></script>
 		<script src="js/level8.js"></script>
+		<script src="js/level9.js"></script>
 	</body>
 </html>
