--- a/game16/index.html
+++ b/game16/index.html
@@ -28,5 +28,6 @@
 		<script src="js/level7.js"></script>
 		<script src="js/level8.js"></script>
 		<script src="js/level9.js"></script>
+		<script src="js/level10.js"></script>
 	</body>
 </html>
