--- a/Strategy Game/index.html
+++ b/Strategy Game/index.html
@@ -4,7 +4,7 @@
 		<title>Strategy Game</title>
 	</head>
 	<body>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" oncontextmenu="return false;"></canvas>
 		<script src="js/script.js"></script>
 	</body>
 </html>
