--- a/game16/index.html
+++ b/game16/index.html
@@ -6,7 +6,7 @@
 
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 		<link rel="stylesheet" href="css/style.css">
-		<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
+		<!--<link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet"> -->
 
 	</head>
 	<body>
